test-package-compiler/src/snapshots/test_package_compiler__generated_tests__unknown_module_field_in_import.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/unknown_module_field_in_import"
---
error: Unknown module value
  ┌─ src/two.gleam:4:13
  │
4 │ import one.{B}
  │             ^ Did you mean `A`?

The module `one` does not have a `B` value.
